- Removed obsolete table tl_filter_values_to_categories
- Removed moduleOperations callback from payment and shipping modules. The same can be achieved through standard DCA operations.
- Moved ePay payment modules to own extension

Version 0.2.12 (2011-??-??)
---------------------------
- Added "transferCollection" hook
- Fixed availability of unpublished products

Version 0.2.11 (2011-08-28)
------------------------------
- Improved: checkout is now relying on order pid for member, not the currently logged in user object
- Improved: member data is available in checkout confirmation email template
- Fixed "text only" checkbox not hiding html input in mail templates
- Fixed attribute editor allowing to change database field name in edit all mode
- Fixed: direct links to edit mode of modules did not take account of themes
- Fixed potential issues when having multiple cart modules on the same page
- Fixed: Image watermark was not applied if the original image was not resized (Ticket #487)
- Fixed: Asset import added every image to every product due to regex bug (Ticket #512)
- Fixed potential issue in rules when no cart ID was available (Ticket #509)

Version 0.2.10 (2011-07-06)
------------------------------
- Added support for Contao 2.10 "structure" event (see http://dev.contao.org/issues/2504)
- Added shipping & payment method filter to orders
- Added: includeBlankOption=true for select options using foreignKey (Ticket #292)
- Added product sku to filter module
- Improved: billing & shipping country is no longer mandatory in store config
- Changed tl_iso_products::getCategoryList from private to protected function (Ticket #477)
- Fixed error message when editing page category (Ticket #469)
- Fixed IsotopeProductCollection::getProducts database caching
- Fixed rules error on product restrictions when not product in cart (Ticket #471)
- Fixed coupon could be applied multiple times by using different letter cases (Ticket #476)